Fixes wrong button height in overview settings on mobile devices

--- a/css/comp-overview-settings.css
+++ b/css/comp-overview-settings.css
@@ -73,8 +73,3 @@
 
 }
 
-@media (pointer: coarse) {
-    .ov-sett-controls > * {
-        height: var(--button-touch-height);
-    }
-}
